fix heading to h1 and reduce the gap of about section to 1rem

--- a/src/Sass/Home.scss
+++ b/src/Sass/Home.scss
@@ -44,9 +44,9 @@
     .about {
         @include Flexing;
 
-        gap: 2rem;
+        gap: 1rem;
         h1{
-            @include heading
+            @include h1;
         }
         p{
             @include paragraph
